force-app/main/default/objects/Budget/fields/Active_Budget__c.field-meta.xml
<CustomField>
    <fullName>Active_Budget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active Budget</label>
    <type>Checkbox</type>
</CustomField>