force-app/main/default/objects/Budget/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prior Budget</label>
    <referenceTo>Budget</referenceTo>
    <relationshipLabel>Budgets</relationshipLabel>
    <relationshipName>Budgets</relationshipName>
    <type>Lookup</type>
</CustomField>