force-app/main/default/objects/Budget/fields/Budget_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Budget_Assignment__c</fullName>
    <inlineHelpText>What is this budget being generated from?</inlineHelpText>
    <label>Budget Assignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>Amendment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>