force-app/main/default/objects/Budget/fields/Budget_Years__c.field-meta.xml
<CustomField>
    <fullName>Budget_Years__c</fullName>
    <inlineHelpText>How many years is this budget template intended to be used? Defines how many times the template will be repeated during an application to be filled out.</inlineHelpText>
    <label>Budget Years</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>