force-app/main/default/objects/Budget/fields/Center_Number__c.field-meta.xml
<CustomField>
    <fullName>Center_Number__c</fullName>
    <label>Center Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>