force-app/main/default/objects/Budget/fields/Contract__c.field-meta.xml
<CustomField>
    <fullName>Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the contract this is a budget for.  On contract there is a lookup/link field to the Active Budget, as budget revisions could take place there will/can be many related inactive budgets related to this contract.</inlineHelpText>
    <label>Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Budgets</relationshipLabel>
    <relationshipName>Budgets</relationshipName>
    <type>Lookup</type>
</CustomField>