force-app/main/default/objects/Budget/fields/Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Line_Item__c</fullName>
    <label>Line Item</label>
    <length>200</length>
    <type>Text</type>
</CustomField>