force-app/main/default/objects/Budget/fields/Match_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Match_Percentage__c</fullName>
    <description>Field to be used on budget to define match percentage (aka 80% match leaving 20% for the Subrecipient to allocate from other funds). Will be inherited down to child categories and details  for calculations</description>
    <inlineHelpText>How much will OCJP match to the Subrecipient request? (aka 80% match leaving 20% for the Subrecipient to allocate from other funds)</inlineHelpText>
    <label>Match Percentage</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>