force-app/main/default/objects/Budget/fields/Prior_Budget_Amount__c.field-meta.xml
<CustomField>
    <fullName>Prior_Budget_Amount__c</fullName>
    <formula>Budget__r.Total_Planned_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prior Budget Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>