force-app/main/default/objects/Budget/fields/SmartSheetId__c.field-meta.xml
<CustomField>
    <fullName>SmartSheetId__c</fullName>
    <externalId>true</externalId>
    <label>SmartSheetId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>