force-app/main/default/objects/Budget/fields/Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Subcategory__c</fullName>
    <description>These values should match the picklist on the custom metadata type Budget_Table_Field__mdt</description>
    <label>Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Match</fullName>
            </value>
            <value>
                <fullName>No Match</fullName>
            </value>
            <value>
                <fullName>Expense</fullName>
            </value>
            <value>
                <fullName>Revenue</fullName>
            </value>
            <value>
                <fullName>Revised</fullName>
            </value>
            <value>
                <fullName>Expense Revised</fullName>
            </value>
            <value>
                <fullName>Revenue Revised</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Development Revised</fullName>
            </value>
            <value>
                <fullName>Construction Revised</fullName>
            </value>
            <value>
                <fullName>Egrams</fullName>
            </value>
            <value>
                <fullName>Development (Rental Housing)</fullName>
            </value>
            <value>
                <fullName>Expense (CDA)</fullName>
            </value>
            <value>
                <fullName>Expense (CDA) Revised</fullName>
            </value>
            <value>
                <fullName>Development Rental Housing</fullName>
                <isActive>false</isActive>
                <label>Development Rental Housing</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>