force-app/main/default/objects/Budget/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Template</label>
    <type>Checkbox</type>
</CustomField>