force-app/main/default/objects/Budget/fields/Template_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Template_Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines when a template is available for selection</description>
    <inlineHelpText>Is this budget template active for use</inlineHelpText>
    <label>Template Is Active</label>
    <type>Checkbox</type>
</CustomField>