force-app/main/default/objects/Budget/fields/Total_Activity_Budget_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Activity_Budget_Amount__c</fullName>
    <inlineHelpText>This is the total of the &apos;Total Activity Budget&apos; Column in the Budget Categories</inlineHelpText>
    <label>Total Activity Budget Amount</label>
    <summarizedField>BudgetCategory.Total_Activity_Budget__c</summarizedField>
    <summaryForeignKey>BudgetCategory.BudgetId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>