force-app/main/default/objects/Budget/fields/Total_Other_Funding__c.field-meta.xml
<CustomField>
    <fullName>Total_Other_Funding__c</fullName>
    <inlineHelpText>This is the total of &apos;Other Funding&apos; column in the Budget Categories.</inlineHelpText>
    <label>Total Other Funding</label>
    <summarizedField>BudgetCategory.Other_Funding__c</summarizedField>
    <summaryForeignKey>BudgetCategory.BudgetId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>