force-app/main/default/objects/Budget/fields/Total_Planned_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Planned_Amount__c</fullName>
    <label>Total Proposed CDBG  Amount</label>
    <summarizedField>BudgetCategory.Total_Amount__c</summarizedField>
    <summaryForeignKey>BudgetCategory.BudgetId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>