force-app/main/default/objects/Budget/recordTypes/Budget_Revision.recordType-meta.xml
<RecordType>
    <fullName>Budget_Revision</fullName>
    <active>true</active>
    <label>Budget Revision</label>
</RecordType>