force-app/main/default/objects/Budget/recordTypes/Budget_Totals.recordType-meta.xml
<RecordType>
    <fullName>Budget_Totals</fullName>
    <active>true</active>
    <description>To aggregate and summarize budget data across projects.</description>
    <label>Budget Totals</label>
</RecordType>