force-app/main/default/objects/Budget/listViews/All_Budgets.listView-meta.xml
<ListView>
    <fullName>All_Budgets</fullName>
    <columns>Name</columns>
    <columns>Subcategory__c</columns>
    <columns>PeriodName</columns>
    <columns>PeriodStartDate</columns>
    <columns>PeriodEndDate</columns>
    <columns>Description</columns>
    <columns>Type</columns>
    <columns>Status</columns>
    <filterScope>Everything</filterScope>
    <label>All Budgets</label>
</ListView>