force-app/main/default/objects/Budget/listViews/Budget_Manager_Budget.listView-meta.xml
<ListView>
    <fullName>Budget_Manager_Budget</fullName>
    <filterScope>Queue</filterScope>
    <label>CDA Budget Manager</label>
    <queue>Budget_Manager</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>