force-app/main/default/objects/Budget/listViews/Finance_Team_Budget.listView-meta.xml
<ListView>
    <fullName>Finance_Team_Budget</fullName>
    <filterScope>Queue</filterScope>
    <label>CDA Finance Team</label>
    <queue>Finance_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>