force-app/main/default/objects/Budget/listViews/Revised_Budgets.listView-meta.xml
<ListView>
    <fullName>Revised_Budgets</fullName>
    <columns>Name</columns>
    <columns>Contract__c</columns>
    <columns>Approval_Status__c</columns>
    <columns>Status</columns>
    <columns>PeriodName</columns>
    <columns>Total_Planned_Amount__c</columns>
    <columns>Description</columns>
    <columns>CreatedDate</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Record_Type_Name__c</field>
        <operation>equals</operation>
        <value>Budget_Revision</value>
    </filters>
    <label>Revised Budgets</label>
</ListView>