force-app/main/default/objects/Budget/listViews/Template_Budgets.listView-meta.xml
<ListView>
    <fullName>Template_Budgets</fullName>
    <columns>Name</columns>
    <columns>Description</columns>
    <columns>PeriodName</columns>
    <columns>PeriodStartDate</columns>
    <columns>PeriodEndDate</columns>
    <columns>Type</columns>
    <columns>Status</columns>
    <columns>CreatedDate</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Template__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Template Budgets</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>